--- a/i3/config
+++ b/i3/config
@@ -10,7 +10,8 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-
+set $term gnome-terminal
+set $term2 i3-sensible-terminal
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
@@ -42,6 +43,8 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Shift+Return exec gnome-terminal --working-directory="`xcwd`"
+bindsym $mod+o exec /home/camilo/.config/scripts/open-terminal-in-same-folder.sh
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -179,14 +182,15 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    status_command i3status
+    status_command i3status #/home/camilo/.config/scripts/i3-status-extend.sh 
     position top
     separator_symbol " | "
 }
 
 #for_window [class="^.*"] border pixel 2
 #
-exec setxkbmap -option ctrl:nocaps
+# exec setxkbmap -option ctrl:nocaps
+exec --no-startup-id setxkbmap -option caps:escape
 exec feh --bg-scale /home/camilo/Pictures/wallpapers/pexels-billel-moula-540518.jpg
 
 for_window [class=".*"] border pixel 0
@@ -199,20 +203,39 @@ smart_borders on
 exec --no-startup-id compton
 # exec --no-startup-id polybar example -q
 
-mode "exit: [l]ogout, [r]eboot, [s]hutdown" {
+mode "exit: [l]ogout, [r]eboot, [s]uspend, [h]ibernate or sh[u]tdown" {
     bindsym l exec i3-msg exit
     bindsym r exec systemctl reboot
-    bindsym s exec systemctl shutdown
+    bindsym u exec systemctl shutdown
+    bindsym s exec i3lock && systemctl suspend
+    bindsym h exec systemctl hybernate
+    # --no-startup-id i3exit hibernate, mode "default"
     bindsym Escape mode "default"
     bindsym Return mode "default"
 }
 
-bindsym $mod+Shift+x mode "exit: [l]ogout, [r]eboot, [s]hutdown"
+bindsym $mod+Shift+x mode "exit: [l]ogout, [r]eboot, [s]uspend, [h]ibernate or sh[u]tdown"
 bindsym $mod+b exec gnome-terminal -e /usr/bin/ranger
+bindsym $mod+Shift+b exec nautilus
 bindsym $mod+z exec gnome-terminal -e vim
 bindsym $mod+t exec gnome-terminal -e tmux
+bindsym $mod+n exec gnome-terminal -e node
 
-bindsym Mod1+Tab exec --no-startup-id rofi -modi combi -combi-modi window -show combi
+bindsym $mod+Tab exec --no-startup-id rofi -modi combi -combi-modi window -show combi
 bindsym $mod+space exec /home/camilo/projects/i3-keyboard-input-switcher/bin/i3-keyboard-switcher switch
 exec --no-startup-id dropbox start
-exec --no-startup-id /home/camilo/projects/i3-keyboard-input-switcher/bin/i3-keyboard-switcher us se
+exec --no-startup-id /home/camilo/projects/i3-keyboard-input-switcher/bin/i3-keyboard-switcher
+
+bindsym $mod+p exec --no-startup-id "google-chrome --app=https://roughlyright.com/rr/#/timereport/542a788ac43527f173966ea7"
+
+# exec --no-startup-id $term --title=dropdown --name=dropdown -e tmux
+# for_window [title="dropdown"] floating enable;
+# for_window [title="dropdown"] move scratchpad; [instance="dropdown"] scratchpad show; move scratchpad
+# bindsym $mod+u [title="dropdown"] scratchpad show
+
+bindsym XF86MonBrightnessUp exec sh ~/.config/scripts/backlight.sh -inc 5000
+bindsym XF86MonBrightnessDown exec sh ~/.config/scripts/backlight.sh -dec 5000
+bindsym $mod+Shift+m exec sh ~/.config/scripts/backlight.sh -inc 5000
+bindsym $mod+m exec ~/.config/scripts/backlight.sh -dec 5000
+
+exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
